Added Authorization
-Checks if user has admin level access
-All people methods now require admin access
-Most barangay methods now require admin access except GET
