# API/models/users_model.js
@@ -11,6 +11,7 @@ const usersSchema = mongoose.Schema({
     username:{type:String,required:true},
     password:{type:String,required:true},
     api_key:{type:String,required:true},
+    level:{type:String},
     
 });
 
